--- a/src/lk/ijse/gdse66/hostel/view/reports_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/reports_form.fxml
@@ -4,53 +4,48 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="621.0" prefWidth="1118.0" style="-fx-background-color: white;"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="lk.ijse.gdse66.hostel.controller.ReportsFormController">
+<AnchorPane prefHeight="621.0" prefWidth="1118.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ReportsFormController">
     <children>
-        <AnchorPane layoutX="798.0" layoutY="211.0" prefHeight="200.0" prefWidth="200.0"
-                    style="-fx-background-color: yellow; -fx-background-radius: 20px;">
+        <AnchorPane layoutX="798.0" layoutY="211.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: orange; -fx-background-radius: 20px;">
             <children>
                 <Label fx:id="lblUserCount" focusTraversable="false" layoutX="81.0" layoutY="73.0" text="1">
                     <font>
-                        <Font name="Arial" size="50.0"/>
+                        <Font name="Arial" size="50.0" />
                     </font>
                 </Label>
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="468.0" layoutY="211.0" prefHeight="200.0" prefWidth="200.0"
-                    style="-fx-background-color: yellow; -fx-background-radius: 20px;">
+        <AnchorPane layoutX="468.0" layoutY="211.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: orange; -fx-background-radius: 20px;">
             <children>
                 <Label fx:id="lblRoomCount" focusTraversable="false" layoutX="88.0" layoutY="79.0" text="1">
                     <font>
-                        <Font name="Arial" size="50.0"/>
+                        <Font name="Arial" size="50.0" />
                     </font>
                 </Label>
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="125.0" layoutY="211.0" prefHeight="200.0" prefWidth="200.0"
-                    style="-fx-background-color: yellow; -fx-background-radius: 20px;">
+        <AnchorPane layoutX="125.0" layoutY="211.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: orange; -fx-background-radius: 20px;">
             <children>
                 <Label fx:id="lblStudentCount" focusTraversable="false" layoutX="85.0" layoutY="76.0" text="1">
                     <font>
-                        <Font name="Arial" size="50.0"/>
+                        <Font name="Arial" size="50.0" />
                     </font>
                 </Label>
             </children>
         </AnchorPane>
         <Label layoutX="107.0" layoutY="417.0" text="Total Customers">
             <font>
-                <Font name="Arial Bold" size="30.0"/>
+                <Font name="Arial Bold" size="30.0" />
             </font>
         </Label>
         <Label layoutX="477.0" layoutY="417.0" text="Total Rooms">
             <font>
-                <Font name="Arial Bold" size="30.0"/>
+                <Font name="Arial Bold" size="30.0" />
             </font>
         </Label>
         <Label layoutX="816.0" layoutY="417.0" text="Total Users">
             <font>
-                <Font name="Arial Bold" size="30.0"/>
+                <Font name="Arial Bold" size="30.0" />
             </font>
         </Label>
     </children>
